# EmergenCease

./: .gitignore  MANIFEST.in  README.md  __main__.py  pyproject.toml  requirements.txt  run_eval.sh  setup.py
config/torchtune_org/: llama_3.1_8b_instruct.yaml  llama_3.2_1b_instruct.yaml  llama_3.2_3b_instruct.yaml
data/finetune/: additional_test_data.csv  finetune_test.csv  finetune_train.csv  finetune_val.csv
docs/: cap_templates.json  ~$cap.xlsx
models/LoRA-Llama-3.2-1B-Instruct/: README.md  adapter_config.json  original_repo_id.json
models/LoRA-Llama-3.2-1B-Instruct/original/: params.json
src/cap_translator/: cap_templates.json  translate.py
src/data/: cap.py  convert.py  download.py  enums.py  file.py  paths.py
src/eval/: eval.py
src/extraction/: llm.py  ner.py
src/finetune/: finetune.py
src/ner/: ner.py
src/preprocess/: event_map.yaml  ner_config.yaml  preprocess.py  timezones.csv
src/utils/: attribute_filter.py  file.py  model.py  paths.py
tests/: environment.yml  oversampling.py  train.py  undersample.py
